# note-clerk

./: .editorconfig  .flake8  .mergify.yml  README.md  mypy.ini  noxfile.py  pyproject.toml  pytest.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  contributing.rst  index.rst  reference.rst  requirements.txt
src/note_clerk/: __main__.py  _utils.py  app.py  console.py  fixing.py  linting.py  pinboard.py  planning.py  utils.py
src/note_clerk/checks/: __init__.py  check_header_tags_array.py  check_header_tags_quoted.py  check_header_type_leading_slash.py
src/note_clerk/linting/: __init__.py  base.py
src/note_clerk/linting/checks/: check_header_tags_array.py  check_header_tags_quoted.py
tests/: __init__.py  _utils.py  conftest.py  fix_cases.py  test_app.py  test_console.py  test_console_analyze_list_tags.py  test_console_analyze_list_types.py  test_console_lint.py  test_console_plan.py  test_fix.py  test_lint.py  test_linting.py  test_list_files.py  test_planning.py  test_utils.py
tests/note_clerk/: __init__.py
tests/note_clerk/checks/: __init__.py  test_check_filename_id.py  test_check_header_tags_array.py  test_check_header_tags_quoted.py  test_check_header_type_leading_slash.py  utils.py
tests/note_clerk/linting/: test_check_header_tags_array.py  test_check_header_tags_quoted.py
