[tool.poetry]
name = "note-clerk"
version = "0.0.19"
authors = ["Adam Jackman <adam@acjackman.com>"]
description = "Utility to manage plain text notes."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/acjackman/note-clerk"
repository = "https://github.com/acjackman/note-clerk"
documentation = "https://note-clerk.readthedocs.io"
packages = [
    { include = "note_clerk", from = "src" },
]
classifiers = [
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.9"
click = ">=7,<9"
requests = "^2.23.0"
desert = "^2020.1.6"
marshmallow = "^3.5.1"
boltons = ">=20,<22"
python-frontmatter = ">=0.5,<1.1"
"ruamel.yaml" = "^0.16.12"
orderedset = "^2.0.3"
python-dateutil = "^2.8.1"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-mock = "^3.7.0"
coverage = {extras = ["toml"], version = "^6.3"}
pytest-cov = "^3.0.0"
black = "^22.1"
flake8 = "^4.0.1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.3.2"
flake8-bugbear = "^21.3.2"
flake8-import-order = "^0.18.1"
safety = "^1.8.5"
mypy = "^0.812"
typeguard = "^2.13.3"
flake8-annotations = "^2.7.0"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
xdoctest = "^0.15.10"
sphinx = "^4.4.0"
sphinx-autodoc-typehints = "^1.17.0"
codecov = "^2.1.12"
poethepoet = "^0.13.1"
freezegun = "^1.2.1"
pytest-watch = "^4.2.0"

[tool.poetry.scripts]
note-clerk = "note_clerk.console:cli"

[tool.poe.tasks]
test = "pytest -m 'not e2e'"
test-cov = "pytest --cov -m 'not e2e'"
doc-req = { "shell" = """\
   poetry export -f requirements.txt --dev --without-hashes \
   | grep -E '^(sphinx|sphinx-autodoc-typehints)==' \
   | sed 's/;.*//g' \
   | sort \
   > docs/requirements.txt \
   """}

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["note_clerk"]

[tool.coverage.report]
show_missing = true
fail_under = 100
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
